--- a/style.css
+++ b/style.css
@@ -50,11 +50,12 @@ a:hover, a.active{
     #menu-icon{
         display: block;
         float: right;
-        
+        margin-right: 1vh;
+        margin-left: 1vh;
     }
   
    label .logo{
-        font-size: 10px;
+        font-size: 35px;
         padding-left:50px;
     }
     nav ul{
@@ -80,4 +81,71 @@ a:hover, a.active{
     
   
     
+}
+@media screen and (max-width : 400px) {
+    #menu-icon{
+        display: block;
+        float: right;
+        margin-right: 1vh;
+        margin-left: 5vh;
+    }
+  
+   label .logo{
+        font-size: 35;
+    }
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: #7c5033;
+        text-align: center;
+        top: 80px;
+        left: -100%;
+        transition: all .5s;
+    }
+    nav ul li {
+       display: block;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+    a:hover, a.active{
+        border: none;
+        color: #ED5F00;
+    }
+    
+  
+    
+}
+@media screen and (min-width : 280px) {
+    #menu-icon{
+        display: block;
+        float: right;
+        margin-right: 1vh;
+        margin-left: 1vh;
+    }
+  
+   label .logo{
+        font-size: 10px;
+    }
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: #7c5033;
+        text-align: center;
+        top: 80px;
+        left: -100%;
+        transition: all .5s;
+    }
+    nav ul li {
+       display: block;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+    a:hover, a.active{
+        border: none;
+        color: #ED5F00;
+    }
 }
