--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a:hover, a.active{
         margin-left: 1vh;
     }
   
-   label .logo{
+    nav .logo{
         font-size: 35px;
         padding-left:50px;
     }
@@ -90,8 +90,8 @@ a:hover, a.active{
         margin-left: 5vh;
     }
   
-   label .logo{
-        font-size: 35;
+    nav .logo{
+        font-size: 20px;
     }
     nav ul{
         position: fixed;
@@ -117,7 +117,44 @@ a:hover, a.active{
   
     
 }
-@media screen and (min-width : 280px) {
+@media screen and (max-width : 393px) {
+    #menu-icon{
+        display: block;
+        float: right;
+        margin-right: 1vh;
+        margin-left: 1vh;
+    }
+  
+    nav .logo{
+        font-size: 20px;
+        padding: 0;
+
+    }
+    nav ul{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: #7c5033;
+        text-align: center;
+        top: 80px;
+        left: -100%;
+        transition: all .5s;
+    }
+    nav ul li {
+       display: block;
+    }
+    nav ul li a{
+        font-size: 16px;
+    }
+    a:hover, a.active{
+        border: none;
+        color: #ED5F00;
+    }
+    
+  
+    
+}
+@media screen and (max-width : 280px) {
     #menu-icon{
         display: block;
         float: right;
@@ -148,4 +185,7 @@ a:hover, a.active{
         border: none;
         color: #ED5F00;
     }
+    
+  
+    
 }
