--- a/style.css
+++ b/style.css
@@ -82,4 +82,16 @@ a:hover, a.active{
   
     
 }
+@media screen and (min-width : 1000px) {
+    #menu-icon{
+        display: none;
+        float: right;
+        margin-right: 1vh;
+        margin-left: 1vh;
+    }
+
+    
+  
+    
+}
 
